Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0 Beta3
-
-
b1fc47a46 (dev), ff73f023b (6.9), 0c1cf7b6c (tqtc/lts-6.8)
Description
When using the software backend of QSGSoftwareInternalRectangleNode, setting a negative radius and positive corner radius causes visual artifacts in the rendered output. This issue is specific to the software backend and does not occur with positive radii.
Steps to Reproduce:
1. Switch to software adaptation.
2. Run qml corners.qml from qtdeclarative/tests/manual/rectangle
3. Set radius to a negative value
4. Set any corner radii to a positive value.
Attachments
For Gerrit Dashboard: QTBUG-133314 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
644862,4 | Mark rectangle with any radius set as not opaque for software renderer | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
648300,2 | Mark rectangle with any radius set as not opaque for software renderer | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
648425,2 | Mark rectangle with any radius set as not opaque for software renderer | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | +1 |