Mark rectangle with any radius set as not opaque for software renderer

Support for topLeftRadius, topRightRadius etc were added to the software
renderer recently but they were not considered when checking whether
the rectangle is opaque or not. This resulted in background not being
correctly drawn around individually rounded corners.

Fixes: QTBUG-133314
Fixes: QTBUG-136738
Pick-to: 6.8
Change-Id: Id020550d40e800d188a27b943cf9fb1df10f5229
Reviewed-by: Magdalena Stojek <magdalena.stojek@qt.io>
Reviewed-by: Matthias Rauter <matthias.rauter@qt.io>
(cherry picked from commit b1fc47a467562340278b90acb36c3ea12c12bfa9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>